# turtlebot_experiments

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
config/: params.yaml
include/tracking/: pid_controller.hpp  turtlebot3_controller.hpp  turtlebot3_model.hpp
launch/: target_publisher_launch.py  turtlebot3_controller.launch.py  turtlebot3_model_launch.py
scripts/: target_publisher.py
src/: main.cpp  pid_controller.cpp  test_node.cpp  turtlebot3_controller.cpp  turtlebot3_model.cpp
