<?xml version="1.0"?>
<package format="3">
  <name>tracking</name>
  <version>0.1.0</version>
  <description>ROS 2 package for TurtleBot3 tracking a moving target using PID control and obstacle avoidance.</description>
  <maintainer email="jbmm@ugr.es">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- Python support (optional) -->
  <exec_depend>python3</exec_depend>

  <!-- Launch support -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
